<resources>
    <string name="app_name">GreenFlag</string>

    <string name="activity_main_policy_information">Policy information</string>
    <string name="activity_main_greenflag_customers_can_create_an_account_to_access">GreenFlag customers can create an account to access</string>
    <string name="activity_main_tv_1">Car health updates</string>
    <string name="activity_main_btn">Create an account</string>
    <string name="activity_main_tv_2">Request a rescue online</string>

    <string name="create_account_criteria">
        Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters."
    </string>
    <string name="create_account_hint">See criteria below</string>
    <string name="activity_create_title">Create an account</string>
    <string name="create_account_repeat_password">Repeat password</string>
    <string name="create_account_create_password">Create password</string>
    <string name="create_account_btn_text">Next</string>
    <string name="create_account_email_err">Email is invalid</string>
    <string name="name">Name</string>
    <string name="enter_info">Enter Info</string>
    <string name="age">Age</string>
    <string name="change_photo">Change photo</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="not_specified">Not Specified</string>
    <string name="postal_address_opt">Postal Address (Opt)</string>
    <string name="save">save</string>
    <string name="gender">Gender</string>
    <string-array name="info_countries_array">
        <item>Not-Specified</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
